# ACG_GET

./: .gitignore  CMakeLists.txt  README.md
include/: acg_renaming.h  menus.h
src/: CMakeLists.txt  acg_renaming.cpp  main.cpp  menus.cpp
tests/: CMakeLists.txt  test1.cpp
